UI fixes and delete visibilty

--- a/TemplateCore/TemplateCore/WebApp/CSS/TemplatePage.css
+++ b/TemplateCore/TemplateCore/WebApp/CSS/TemplatePage.css
@@ -8,6 +8,10 @@
     flex-direction: row;
 }
 
+.single-buttion-wrapper {
+    margin: 3px;
+}
+
 .template-property {
     width: 320px;
     height: 40px;
